--- a/src/css/partials/_global.scss
+++ b/src/css/partials/_global.scss
@@ -46,3 +46,11 @@ th:first-child {
     }
   }
 }
+
+::placeholder {
+  color: rgb(202, 195, 195) !important;
+}
+
+label {
+  text-transform: capitalize;
+}
