--- a/src/css/additional-styles/utility-patterns.css
+++ b/src/css/additional-styles/utility-patterns.css
@@ -15,7 +15,7 @@
     @apply text-2xl font-extrabold tracking-tight;
 }
 
-@screen md {
+@media (width >= theme(--breakpoint-md)) {
     .h1 {
         @apply text-5xl;
     }
@@ -30,7 +30,7 @@
 .btn-lg,
 .btn-sm,
 .btn-xs {
-    @apply font-medium text-sm inline-flex items-center justify-center border border-transparent rounded-lg leading-5 shadow-sm transition;
+    @apply font-medium text-sm inline-flex items-center justify-center border border-transparent rounded-lg leading-5 shadow-xs transition;
 }
 
 .btn {
@@ -67,14 +67,14 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 .form-checkbox {
-    @apply rounded;
+    @apply rounded-sm;
 }
 
 .form-input,
 .form-textarea,
 .form-multiselect,
 .form-select {
-    @apply text-sm text-gray-800 dark:text-gray-100 leading-5 py-2 px-3 border-gray-200 hover:border-gray-300 focus:border-gray-300 dark:border-gray-700/60 dark:hover:border-gray-600 dark:focus:border-gray-600 shadow-sm rounded-lg;
+    @apply text-sm text-gray-800 dark:text-gray-100 leading-5 py-2 px-3 border-gray-200 hover:border-gray-300 focus:border-gray-300 dark:border-gray-700/60 dark:hover:border-gray-600 dark:focus:border-gray-600 shadow-xs rounded-lg;
 }
 
 .form-input,
@@ -88,7 +88,7 @@ input[type="search"]::-webkit-search-results-decoration {
 
 .form-checkbox,
 .form-radio {
-    @apply text-violet-500 checked:bg-violet-500 dark:checked:border-transparent border border-gray-300 focus:border-violet-300 dark:border-gray-700/60 dark:focus:border-violet-500/50;
+    @apply text-violet-500 checked:bg-violet-500 checked:border-transparent border border-gray-300 dark:border-gray-700/60 dark:checked:border-transparent focus-visible:ring-2 focus-visible:ring-violet-500/50;
 }
 
 /* Switch element */
@@ -111,8 +111,12 @@ input[type="search"]::-webkit-search-results-decoration {
     transition: all .15s ease-out;
 }
 
+.form-switch input[type="checkbox"] + label {
+  @apply bg-gray-400 dark:bg-gray-700;
+}
+
 .form-switch input[type="checkbox"]:checked + label {
-    @apply bg-violet-500;
+  @apply bg-violet-500;
 }
 
 .form-switch input[type="checkbox"]:checked + label > span:first-child {
